<resources>
    <string name="app_name">ScribbleStuff</string>

    <string name="title_activity_draw">DrawActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="password">password</string>
    <string name="example_email">example@ex.com</string>
    <string name="please_login">Please Login</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="games">Games</string>
    <string name="draw">Draw</string>
    <string name="sign_out">Sign Out</string>
    <string name="friends">Friends</string>
    <string name="type_draw">DRAW</string>
    <string name="type_guess">GUESS</string>
    <string name="turn_number">Turn No. </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear">Clear</string>
    <string name="one" />
    <string name="two" />
    <string name="three" />
    <string name="four" />
    <string name="five" />
    <string name="six" />
    <string name="seven" />
    <string name="eight" />
    <string name="nine" />
    <string name="ten" />
    <string name="guess">Guess</string>
    <string name="choose_your_next_word">Choose Your Next Word</string>
    <string name="challenge">Challenge</string>
    <string name="remove">Remove</string>
</resources>
