<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:padding="16dp"
        android:textSize="20sp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountPasswordVerify" />

    <EditText
        android:id="@+id/accountEmail"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/accountPassword"
        app:layout_constraintStart_toStartOf="@+id/accountUsername"
        app:layout_constraintTop_toBottomOf="@+id/accountUsername"
        tools:text="@string/example_email" />

    <EditText
        android:id="@+id/accountPassword"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/accountPasswordVerify"
        app:layout_constraintStart_toStartOf="@+id/accountEmail"
        app:layout_constraintTop_toBottomOf="@+id/accountEmail"
        tools:text="@string/password" />

    <EditText
        android:id="@+id/accountPasswordVerify"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintStart_toStartOf="@+id/accountPassword"
        app:layout_constraintTop_toBottomOf="@+id/accountPassword"
        tools:text="@string/password" />

    <EditText
        android:id="@+id/accountUsername"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/accountEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Username" />
</androidx.constraintlayout.widget.ConstraintLayout>